Añadir env java_opts en Dockerfile