@@ -3,4 +3,4 @@ VOLUME /tmp
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} Datos.jar
 ENTRYPOINT ["java","-jar","/Datos.jar"]
-ENV JAVA_OPTS="-XX:PermSize=1024m -XX:MaxPermSize=512m"
+CMD java -XX:+PrintFlagsFinal $JAVA_OPTIONS -jar java-container.jar
